deployment.yaml
apiVersion: apps/v1 
kind: Deployment 
metadata: 
  name: nginx 
  namespace: mynamespace  
  labels:
    app: nginx
spec: 
  replicas: 2
  selector: 
    matchLabels: 
      app: nginx
  template: 
    metadata: 
      labels: 
        app: nginx 
    spec: 
      containers: 
      - name: nginx 
        image: nginx:1.25.1
        ports: 
        - containerPort: 80
