pod.yaml
apiVersion: v1 
kind: Pod 
metadata: 
  name: nginx 
  namespace: mynamespace
  labels:
    app: nginx  
spec: 
  containers: 
  - name: nginx 
    image: nginx:1.25.4
    ports: 
    - containerPort: 80
