service.yaml
apiVersion: v1 
kind: Service 
metadata: 
  name: nginx-service
  namespace: mynamespace
spec: 
  selector: 
    app: nginx
  ports: 
  - protocol: TCP 
    port: 8080
    targetPort: 80
  type: NodePort
