ingress.yaml
apiVersion: networking.k8s.io/v1 
kind: Ingress 
metadata: 
  name: myapp-ingress 
  namespace: mynamespace
spec: 
  rules: 
  - host: myapp.com
    http: 
      paths: 
      - path: /store
        backend:
           serviceName: nginx-service
           servicePort: 80
      - path: /account
        backend:
           serviceName: apache-service
           servicePort: 8080
